[project]
name = "06-flet-markdown-editor-v4"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet>=0.80.0"
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.0",
]

[tool.flet]
org = "com.mycompany"
product = "06-flet-markdown-editor-v4"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"